--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,237 +1,18 @@
-*{
-    /* font-family: Arial, Helvetica, sans-serif; */
-    font-family: monospace;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    transition: all 0.1s ease-in-out;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    /* background-color: black;
-    color: white; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+.text-input{
+    @apply border border-black rounded-sm px-1 w-full;
 }
-*::-webkit-scrollbar{
-    display: none;
-}
-#root{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.card{
-    padding: 25px;
-    /* border: 1px solid; */
-    border-radius: 5px;
-    box-shadow: 0 0 10px #555;
-    min-height: 300px;
-    max-height: 90%;
-    min-width: 300px;
-    max-width: 90%;
-}
-a{
-    color: #00E;
-}
-a:hover{
-    text-decoration: underline;
-    cursor: pointer;
-
-}
-@keyframes rotation {
-    from{
-        transform: rotate(0deg);
-    }
-    to{
-        transform: rotate(360deg);
-    }
-}
-button, input, textarea{
-    outline: none;
-    padding: 5px;
-    border: 1px solid;
-    border-radius: 5px;
-    background-color: white;
-}
-.loader{
-    height: 36px;
-    width: 36px;
-    border: 4px solid;
-    border-radius: 50%;
-    border-bottom-color: transparent;
-    animation: rotation 1s linear infinite;
-    display: inline-block;
-}
-#home{
-    display: flex;
-    flex-direction: column;
-}
-.error, .success{
-    padding: 10px;
-    border: 1px solid ;
-    border-radius: 5px;
-    background-color: #faa;
+.error{
+    @apply border-2 border-red-600 bg-red-100 text-red-600 rounded-md px-2 py-1
 }
 .success{
-    background-color: #afa;
+    @apply border-2 border-green-600 bg-green-100 text-green-600 rounded-md px-2 py-1
 }
-#show{
-    margin-left: 10px;
-}
-.members{
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
-    border-bottom: 1px solid;
-}
-input[type=checkbox]{
-    display: none;
-}
-label.convo{
-    display: block;
-}
-input[type=checkbox]:checked + label.del{
-    text-decoration: line-through;
-    text-decoration-thickness: 2px;
-}
-.not-selected{
-    border-color: #aaa;
-}
-.tab{
-    display: flex;
-    margin-bottom: 10px;
-}
-.tab > button{
-    width: 100%;
-}
-#groupName{
-    display: block;
-    width: 100%;
-}
-#groupUsers{
-    margin: 15px 0;
-}
-#groupUsers > span{
-    border: 1px solid;
-    border-radius: 5px;
-    padding: 5px;
-    margin-right: 5px;
-}
-#groupUsers > span:hover{
-    cursor: pointer;
-    background-color: rgba(0,0,0,0.25);
-}
-#groupUsers > span:active{
-    background-color: rgba(0,0,0,0.5);
-}
-.convos{
-    overflow: scroll;
-    height: 100%;
-}
-.convo{
-    padding: 10px 5px;
-    border-bottom: 1px solid;
-}
-.convo > span{
-    float: right;
-}
-.convo:hover, button:hover:enabled{
-    background-color: rgba(0,0,0,0.25);
-    cursor: pointer;
-}
-.convo:active, button:active:enabled{
-    background-color: rgba(0,0,0,0.5);
+.button-normal{
+    @apply cursor-pointer border border-black rounded-sm px-1 py-0.5 disabled:border-gray-500 disabled:text-gray-500 disabled:cursor-default hover:bg-gray-300
 }
 .title{
-    padding-bottom: 10px ;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-#chat h1{
-    height: 100%;
-    width: 100%;
-    text-align: center;
-}
-#search{
-    border: 1px solid;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    overflow: hidden;
-    margin-bottom: 10px;
-}
-.searchbar{
-    display: flex;
-    margin: 10px 20px;
-}
-.searchbar > input{
-    width: 100%;
-    margin-right: 10px;
-}
-#searchresult{
-    overflow: hidden;
-    height: 100%;
-}
-#searchresult > *{
-    padding: 10px 20px;
-}
-/* #add{
-    margin: 10px;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-} */
-#messages{
-    padding: 0 5px;
-    border-bottom: 1px solid black;
-    min-height: 200px;
-    height: 100%;
-    width: 500px;
-    overflow: scroll;
-}
-#send{
-    padding-top: 10px;
-    display: flex;
-    align-items: center;
-}
-#send textarea{
-    resize: none;
-    padding: 5px;
-    margin-right: 10px;
-    width: 100%;
-    max-height: 4rem;
-    overflow: scroll;
-}
-.message{
-    display: flex;
-    margin: 10px 0;
-}
-.message span{
-    white-space: pre-wrap;
-}
-.self{
-    justify-content: right;
-}
-.message div{
-    /* background-color: #ffc; */
-    /* border: 1px solid; */
-    box-shadow: 0 0 5px #555;
-    border-radius: 5px;
-    padding: 5px;
-}
-/* .self > div{
-    background-color: #cfc;
-} */
-.time, .author{
-    color: #aaa;
-    font-size: 0.75rem;
-    font-weight: 600;
-}
-.author{
-    color: #555;
+    @apply font-bold text-4xl
 }
