--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 @layer components{
     .text-input{
-        @apply border border-black rounded px-1 w-full;
+        @apply border border-black rounded px-1 flex-grow;
     }
     .error{
         @apply border-2 border-red-600 bg-red-100 text-red-600 rounded-md px-2 py-1
@@ -19,7 +19,7 @@
         @apply cursor-pointer border-2 border-black hover:bg-black hover:text-white rounded w-8 h-8 disabled:cursor-default transition-all
     }
     .title{
-        @apply font-bold text-4xl
+        @apply font-bold text-3xl
     }
 }
 @layer utilities{
